# adc

./: .gitignore  CMakeLists.txt
proteus/: adc.pdsprj
proteus_DEPRICATED/: adc_DEPRICATED.pdsprj
simulide/: adc.sim1
src/: CMakeLists.txt  adc.c  adc.h  boolean.h  button.c  button.h  display.c  display.h  leg.c  leg.h  main.c  pin.c  pin.h  shifter.c  shifter.h
